--- a/assignments/lesson-6/styles/medium-5.css
+++ b/assignments/lesson-6/styles/medium-5.css
@@ -23,7 +23,11 @@
   nav button { 
       display:none; }  /* hamburger button does not need to be shown */
     nav.ul.hide {display: block;}
-  
+    nav ul {
+        display: block;
+    }
+    
+    
   #tenday { 
       display: inline; }  /* show the 10-day forecast with the medium view and up */
   
