--- a/assignments/lesson-7/styles/gallery-7.css
+++ b/assignments/lesson-7/styles/gallery-7.css
@@ -7,103 +7,7 @@
 * { box-sizing: border-box;}  /* This wildcard applies to all elements ensuring a box layout model */
 
 
-
-body {
-   font-size: 16px;
-   font-family: "Ariel", "Times New Roman";
-    font-family: 'Roboto Condensed', sans-serif;
-    background-color: #e7ecef
-      
-  /* Declare the base font-family - from google font api or other */
-}
-
-header, nav, main, footer { /* the comma means apply the following CSS declarations to all of the listed elements */
-  /* Declare the maximum width and other main element rules to limit the stretch on wide views */
-    margin: 1.25rem auto;
-    padding: 1rem;
-    max-width: 1400px;
-   
-    
-}
-
-header {
-    font-size: 2rem ;
-    color: #154360;
-}
-header h1 {
-    display: inline-flex;
-    flex-flow: column nowrap;
-    justify-content: center
-    font-size: 5rem;
-    color: #154360;
-    border-bottom: 3px solid #154360
-    
-}
-header img {
-    width: 200px;
-    height: auto;
-    
-}
-header .subheading {
-    font-size: 1.5rem;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    color: #F39C12;
-}
-
-
-nav {display:hide;
-    
-}
-nav button {
-    display:block;}
-    * {margin:0}
-
-
-nav ul {
-    display: none;
-    list-style-type: none;
-    margin: 1rem;
-    padding: 1rem;
-    background-color: #154360;
-}
-nav ul li {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    }
-nav ul li a {
-    display: inline-flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
-    align-items: center;
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 1.5rem;
-}
-nav ul li.active a {
-    background-color: #F39C12;
-    color: white;
-}
-nav ul li a:hover {
-    background-color: #F39C12
-}
-
-
-main {
-    display: inline-flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    max-width: 350px;
-    color: #154360
-}
-
-main h2 {
+h2 {
     display: inline-flex;
     flex-flow: row nowrap;
     justify-content: center;
