--- a/assignments/lesson-6/styles/main-5.css
+++ b/assignments/lesson-6/styles/main-5.css
@@ -59,6 +59,9 @@ nav ul {
     padding: 1rem;
     background-color: #154360;
 }
+    
+
+}
 nav ul li {
     list-style-type: none;
     margin: 0;
