--- a/assignments/lesson-8/styles/medium-5.css
+++ b/assignments/lesson-8/styles/medium-5.css
@@ -22,11 +22,8 @@
     }
   nav button { 
       display:none; }  /* hamburger button does not need to be shown */
-  
-  nav.ul.hide {
-      display: block;}
-  
-  nav ul {
+    nav.ul.hide {display: block;}
+    nav ul {
         display: block;
     }
     
