--- a/trials/trial.css
+++ b/trials/trial.css
@@ -1,47 +1,23 @@
-* {box-sizing: border-box;}
+    /* This main css file contains the default rules and is geared toward the small/phone view */
 
-body {
-  margin: 40px;
+* { box-sizing: border-box;}  /* This wildcard applies to all elements ensuring a box layout model */
+
+h1 {
+    font-size: 4rem;
+    color: #154360;
+    text-align: center
 }
 
-.wrapper {
-        display: grid;
-    grid-gap: 10px;
-    grid-template-columns: 100px 100px 100px;
-        background-color: #fff;
-        color: #444;
-    }
-
-    .box {
-        background-color: #444;
-        color: #fff;
-        border-radius: 5px;
-        padding: 20px;
-        font-size: 150%;
-
-    }
-
-  .a {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-  }
-  .b {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-  }
-  .c {
-    grid-column: 3 / 4;
-    grid-row: 2 / 3;
-  }
-  .d {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-  }
-  .e {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-  }
-  .f {
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
-  }
+.grid-container {
+  display: grid;
+  grid-template-columns: 400px 400px 400px;
+  
+  padding: 10px;
+}
+.grid-item {
+  background-color: #F39C12(255, 255, 255, 0.8);
+  padding: 20px;
+  font-size: 16px;
+  color: #154360;
+  text-align: center;
+}
