--- a/assignments/lesson-8/styles/main-5.css
+++ b/assignments/lesson-8/styles/main-5.css
@@ -6,7 +6,7 @@
 
 body {
    font-size: 16px;
-   font-family: "Ariel", "Times New Roman";
+   /*font-family: "Ariel", "Times New Roman";*/
     font-family: 'Roboto Condensed', sans-serif;
     background-color: #e7ecef
       
@@ -58,7 +58,7 @@ nav button {
 
 
 nav ul {
-    display: none;
+    /*display: none;*/
     list-style-type: none;
     margin: 1rem;
     padding: 1rem;
