--- a/trials/trial.css
+++ b/trials/trial.css
@@ -7,11 +7,6 @@ h1 {
     color: #154360;
     text-align: center
 }
-grid {
-     display: inline-flex;
-    flex-flow: column wrap;
-    justify-content: center;
-}
 
 .grid-container {
   display: grid;
@@ -26,41 +21,41 @@ grid {
   color: #154360;
   text-align: center;
 }
-
-.row {
-    display: -ms-flexbox; /* IE10 */
-    display: flex;
-    -ms-flex-wrap: wrap; /* IE10 */
+.grid-container {
+     display: flex;
+    flex-flow: wrap;
+    justify-content: center;
     flex-wrap: wrap;
-    padding: 0 4px;
+    grid-gap: 5px;
 }
 
 /* Create four equal columns that sits next to each other */
-.column {
-    -ms-flex: 25%; /* IE10 */
-    flex: 25%;
-    max-width: 25%;
-    padding: 0 4px;
+.grid-item {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+  grid-gap: 5px;
 }
 
-.column img {
-    margin-top: 8px;
-    vertical-align: middle;
+.grid-item img {
+  margin-top: 8px;
+  vertical-align: middle;
+  grid-column-gap: 20px;
 }
-
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media (max-width: 800px) {
-    .column {
-        -ms-flex: 50%;
-        flex: 50%;
-        max-width: 50%;
-    }
+  .grid-item {
+    flex: 33%;
+    max-width: 33%;
+    grid-gap: 5px;
+  }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media (max-width: 600px) {
-    .column {
-        -ms-flex: 100%;
-        flex: 100%;
-        max-width: 100%;
-    }
+  .grid-item {
+    flex: 100%;
+    max-width: 100%;
+    grid-gap: 5px;
+  }
+}
