--- a/assignments/lesson-9/styles/thanks.css
+++ b/assignments/lesson-9/styles/thanks.css
@@ -52,7 +52,7 @@ nav {display:hide;
     
 }
 nav button {
-    display:block;}
+    *display:block;}
     * {margin:0}
 
 
@@ -65,7 +65,7 @@ nav ul {
 }
 
 nav ul.hide {
-    display: none;
+    display: block ;
 }
 
 nav ul li {
