--- a/assignments/weathersite/styles/main.css
+++ b/assignments/weathersite/styles/main.css
@@ -59,6 +59,7 @@ nav button {
 
 
 nav ul {
+    display: none;
     list-style-type: none;
     margin: 1rem;
     padding: 1rem;
@@ -66,7 +67,7 @@ nav ul {
 }
 
 nav ul.hide {
-    display:;
+    display:block;
 }
 
 nav ul li {
