--- a/assignments/weathersite/styles/thanks.css
+++ b/assignments/weathersite/styles/thanks.css
@@ -57,7 +57,7 @@ nav button {
 
 
 nav ul {
-    /*display: none;*/
+    display: none;
     list-style-type: none;
     margin: 1rem;
     padding: 1rem;
@@ -65,7 +65,7 @@ nav ul {
 }
 
 nav ul.hide {
-    display: none;
+    display: block;
 }
 
 nav ul li {
