--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@ body {
     line-height: 32px;
     font-family: Ariel, Times New Roman;
     color: #000000;
-    text-align: center;
+    text-align: left;
 }
 
 h1 {
@@ -15,11 +15,11 @@ h1 {
 
 h2 {
     font-size: 1.25rem;
-    text-align: center;
+    text-align: left;
     border-bottom: 1px solid #ffff;
 }
 
-header, main, footer {
+header, footer {
     text-align: center;
     margin: 1.25rem auto;
     padding: 1rem;
@@ -36,6 +36,11 @@ header img {
     width: 200;
     height: auto;
     float: right;
+}
+
+main {
+    text-align: left;
+    padding-left: 400px;
 }
 
 footer {
