--- a/assignments/weathersite/styles/main.css
+++ b/assignments/weathersite/styles/main.css
@@ -101,6 +101,7 @@ main {
     justify-content: center;
     align-items: center;
     margin: 0 auto;
+    padding-bottom: 35px;
     max-width: 350px;
     color: #154360
 }
@@ -122,18 +123,22 @@ main h2 {
 section.forecast h3 {
     border-style: solid;
     border-color: #F39C12;
-    margin-left: auto;
-    margin-left: auto;
+    margin-left: 25px;
+    margin-bottom: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 table {
     border-collapse: collapse;
     align-content: center;
     margin-left:auto; 
-    margin-right:auto;  
+    margin-right:auto; 
+    
    }
 table, th, td {
     border: 2px solid #F39C12;
     padding: 10px
+        
        }
 main figure { 
     display: flex;
@@ -242,6 +247,7 @@ article {
 article h3 {
     font-size: 3rem;
     text-decoration-line: underline;
+    padding-top: 25px;
 }
 
 footer {
