--- a/assignments/lesson-5/styles/main-5.css
+++ b/assignments/lesson-5/styles/main-5.css
@@ -42,17 +42,23 @@ header .subheading {
     color: #F39C12;
 }
 
-nav {display: none;
+nav {
+    /*display: none;*/
 }
 nav button {
-    display:inline-block;
-}
+    display:block;}
+* {margin:0}
+
 nav ul {
     list-style-type: none;
     margin: 1rem;
     padding: 1rem;
     background-color: #154360;
 }
+nav ul.hide {
+    display: none;
+}
+
 nav ul li {
     list-style-type: none;
     margin: 0;
@@ -60,7 +66,7 @@ nav ul li {
     overflow: hidden;
     }
 nav ul li a {
-    display: block;
+    display: inline-flex;
     color: white;
     text-align: center;
     padding: 14px 16px;
