--- a/assignments/lesson-5/styles/medium-5.css
+++ b/assignments/lesson-5/styles/medium-5.css
@@ -17,6 +17,13 @@
         min-width: 35em;
         align-content: center;
     }
+        nav ul.hide {
+
+    display: block;
+
+}
+    
+    
     nav {
         display: inline;
     }
