--- a/assignments/lesson-7/styles/main-5.css
+++ b/assignments/lesson-7/styles/main-5.css
@@ -49,7 +49,7 @@ header .subheading {
 }
 
 
-nav {display:hide;
+nav /*{display:hide;*/
     
 }
 nav button {
@@ -66,7 +66,7 @@ nav ul {
 }
 
 nav ul.hide {
-    display: block;
+    display: none;
 }
 
 nav ul li {
