--- a/assignments/lesson-8/styles/main-5.css
+++ b/assignments/lesson-8/styles/main-5.css
@@ -49,7 +49,7 @@ header .subheading {
 }
 
 
-nav {display:hide;
+nav /*{display:hide;*/
     
 }
 nav button {
@@ -58,7 +58,7 @@ nav button {
 
 
 nav ul {
-    /*display: none;*/
+    
     list-style-type: none;
     margin: 1rem;
     padding: 1rem;
@@ -66,7 +66,7 @@ nav ul {
 }
 
 nav ul.hide {
-    display:block ;
+    display:none ;
 }
 
 nav ul li {
