--- a/assignments/weathersite/styles/medium.css
+++ b/assignments/weathersite/styles/medium.css
@@ -18,12 +18,8 @@
         align-content: center;
     }
     nav ul.hide {
+      display: block;}
 
-    display: block;
-
-}
-
-  
     nav {
         display: inline;
     }
