--- a/assignments/lesson-7/styles/gallery-7.css
+++ b/assignments/lesson-7/styles/gallery-7.css
@@ -31,8 +31,8 @@ h1 {
 
 /* Create four equal columns that sits next to each other */
 .grid-item {
-  flex: 25%;
-  max-width: 25%;
+  flex: 50%;
+  max-width: %;
   padding: 0 4px;
   grid-gap: 5px;
 }
