--- a/assignments/weathersite/styles/gallery-large.css
+++ b/assignments/weathersite/styles/gallery-large.css
@@ -1,30 +1,9 @@
 @media only screen and (min-width: 64em) {
   /* Only CSS rules that need to be changed to meet the layout needs from medium to large/wide go in here */
 
-grid-container {
+.grid-container {
   display: grid;
-  grid-template-columns: auto auto auto;
-  grid-gap: 50px;
+  grid-template-columns: 400px 400px 400px;
+  
   padding: 10px;
 }
- 
-    
-grid-item1 {
-  grid-column-start: 1;
-  grid-column-end: 2;
-}
-
-grid-item2 {
-  grid-column-start: 2;
-  grid-column-end: 3;
-}
-    
-grid-item3 {
-  grid-column-start: 3;
-  grid-column-end: 4;
-}
-    
- grid-item4 {
-  grid-row-start: 1;
-  grid-row-end: 2;
-}   
