--- a/trials/styles/medium-5.css
+++ b/trials/styles/medium-5.css
@@ -18,11 +18,14 @@
         align-content: center;
     }
     nav {
-        display: inline;
+        display: block;
     }
   nav button { 
-      display:none; }  /* hamburger button does not need to be shown */
-    nav.ul.hide {display: block;}
+      display: none; }  /* hamburger button does not need to be shown */
+    
+    nav.ul.hide {
+        display: block;}
+    
     nav ul {
         display: block;
     }
