--- a/assignments/bikingsite/styles/main.css
+++ b/assignments/bikingsite/styles/main.css
@@ -30,7 +30,7 @@ header {
     justify-content: center
     font-size: 5rem;
     color: #154360;
-    border-bottom: 3px solid #154360;
+    border-bottom: 3px solid #8fc4e5;
     height: 100px;
     
     
@@ -57,6 +57,7 @@ figure img {
     //*border: solid 5pt;
     border-color: #F39C12;*//
     }
+
 
 
 nav {
@@ -105,24 +106,65 @@ nav ul li a:hover {
 }
 
 main figure { 
-    display: flex;
+    display: inline-flex;
     flex-flow: column nowrap;
     justify-content: center;
-    align-items: center;
-    margin: 0px;
+    align-items: flex-start;
+    margin: 5px;
     width:100%;
     
     }
 main figure img { 
     display: inline-flex;
     justify-content: center;
-    margin-left: 0px;
+    align-items: flex-end
+    margin-left: 5px;
+    padding-bottom: 20px;
     max-width: 100%;
     //*min-width: 325px;*//
     //*border: solid 5pt;
     border-color: #F39C12;*//
     }
 
+article p {  
+    min-width: 350px; /* fill the page in the small/phone view */
+    margin-right: auto;
+    padding-bottom: 10px;
+    border: ;
+    border-color: #;
+    align-items: flex-end
+}
+article {
+    font-size: 1.5rem;
+    padding-bottom: 10px;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: flex-start
+    
+}
+h3 {
+    font-size: 3rem;
+    text-decoration-line: underline;
+    padding-top: 25px;
+    padding-bottom: 10px;
+}
+
+section {
+    display: flex;
+    align-items: center;
+    flex-flow: column nowrap;
+    font-size: 1.5rem;
+    
+}
+
+
+iframe {
+    display: inline-flex;
+    align-items: flex-end;
+    justify-content: center;
+    
+}
 
 footer {
     display: flex;
