--- a/assignments/bikingsite/styles/sales.css
+++ b/assignments/bikingsite/styles/sales.css
@@ -18,7 +18,7 @@ h1 {
   background-color: #F39C12(255, 255, 255, 0.8);
   padding: 20px;
   font-size: 16px;
-  color: #154360;
+  color: #272825;
   text-align: center;
 }
 .grid-container {
@@ -43,11 +43,17 @@ h1 {
   grid-column-gap: 20px;
 }
 
+.grid-item p {
+    font-size: 20px;
+    
+}
+
+
 div {
     margin:.5rem;}
 a {margin-right: 1rem;}
 /* hover effect - not anchor tags around images */
-img:hover {box-shadow: 5px 5px 5px #F39C12;}
+img:hover {box-shadow: 5px 5px 5px #8fc4e5;}
 /* rounded corners - boxmodel */
 .rocorn {border-radius: 5px 50px;}
 /* simple opacity */
