--- a/assignments/bikingsite/styles/main.css
+++ b/assignments/bikingsite/styles/main.css
@@ -105,6 +105,30 @@ nav ul li a:hover {
     background-color: #8fc4e5
 }
 
+* {box-sizing: border-box;}
+body {font-family: Verdana, sans-serif;}
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1350px;
+  position: relative;
+  margin: 2 auto;
+    
+}
+
+.active {
+  background-color: #717171;
+}
+
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .text {font-size: 11px}
+}
+
+
 main figure { 
     display: inline-flex;
     flex-flow: column nowrap;
@@ -115,7 +139,7 @@ main figure {
     
     }
 main img { 
-    display: inline-flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     margin-left: 5px;
@@ -131,7 +155,14 @@ main p {
     color: #272825;
     max-width: 500px;
     display: flex;
-    align-content: flex-end;
+    align-content: center;
+    margin-bottom: 25px;
+}
+
+
+    
+}
+    
 }
 
 article p {  
