--- a/assignments/bikingsite/styles/sales.css
+++ b/assignments/bikingsite/styles/sales.css
@@ -15,7 +15,7 @@ h1 {
   padding: 10px;
 }
 .grid-item {
-  background-color: #F39C12(255, 255, 255, 0.8);
+  
   padding: 20px;
   font-size: 16px;
   color: #272825;
@@ -32,7 +32,7 @@ h1 {
 /* Create four equal columns that sits next to each other */
 .grid-item {
   flex: 50%;
-  max-width: %;
+  /*max-width: %;*/
   padding: 0 4px;
   grid-gap: 5px;
 }
@@ -58,7 +58,7 @@ img:hover {box-shadow: 5px 5px 5px #8fc4e5;}
 .rocorn {border-radius: 5px 50px;}
 /* simple opacity */
 .opac {opacity: .5;}
-}
+
 
 
 /* Responsive layout - makes a two column-layout instead of four columns */
