--- a/assignments/bikingsite/styles/main.css
+++ b/assignments/bikingsite/styles/main.css
@@ -1,29 +1,38 @@
 /* This main css file contains the default rules and is geared toward the small/phone view */
 
-* { box-sizing: border-box;}  /* This wildcard applies to all elements ensuring a box layout model */
-body {
-   font-size: 16px;
-   font-family: "Ariel", "Times New Roman";
-    font-family: 'Roboto Condensed', sans-serif;
-    background-color: #99c382
-      
-  /* Declare the base font-family - from google font api or other */
+* {
+    box-sizing: border-box;
 }
 
-header, nav, main, footer { /* the comma means apply the following CSS declarations to all of the listed elements */
-  /* Declare the maximum width and other main element rules to limit the stretch on wide views */
+/* This wildcard applies to all elements ensuring a box layout model */
+
+body {
+    font-size: 16px;
+    font-family: "Ariel", "Times New Roman";
+    font-family: 'Roboto Condensed', sans-serif;
+    background-color: #99c382
+    /* Declare the base font-family - from google font api or other */
+}
+
+header,
+nav,
+main,
+footer {
+    /* the comma means apply the following CSS declarations to all of the listed elements */
+    /* Declare the maximum width and other main element rules to limit the stretch on wide views */
     margin: 1.25rem auto;
     padding: 1rem;
     max-width: 1400px;
-   
-    
+
+
 }
 
 header {
-    font-size: 1.5rem ;
+    font-size: 1.5rem;
     color: #154360;
     background-color: #586f3f;
 }
+
 header {
     display: inline-flex;
     flex-flow: column nowrap;
@@ -31,15 +40,17 @@ header {
     font-size: 5rem;
     color: #154360;
     border-bottom: 3px solid #8fc4e5;
-    height: 100px;
-    
-    
+    height: 85px;
+
+
 }
+
 header img {
     width: 600px;
     height: auto;
-    
+
 }
+
 header {
     font-size: 1.5rem;
     display: flex;
@@ -48,7 +59,7 @@ header {
     color: #F39C12;
 }
 
-figure img { 
+figure img {
     display: inline-flex;
     justify-content: center;
     margin-left: 0px;
@@ -56,17 +67,21 @@ figure img {
     /*min-width: 325px;*/
     /*border: solid 5pt;
     border-color: #F39C12;*/
-    }
+}
 
 
 
 nav {
     /*display:hide;*/
-    
 }
+
 nav button {
-    display:block;}
-    * {margin:0}
+    display: block;
+}
+
+* {
+    margin: 0
+}
 
 
 nav ul {
@@ -81,12 +96,13 @@ nav ul.hide {
 }
 
 nav ul li {
-    
+
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    }
+}
+
 nav ul li a {
     display: inline-flex;
     flex-flow: row nowrap;
@@ -97,48 +113,66 @@ nav ul li a {
     text-decoration: none;
     font-size: 1.5rem;
 }
+
 nav ul li.active a {
     background-color: #586f3f;
     color: white;
 }
+
 nav ul li a:hover {
     background-color: #8fc4e5
 }
 
-* {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
-img {vertical-align: middle;}
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Verdana, sans-serif;
+}
+
+.mySlides {
+    display: none;
+}
+
+img {
+    vertical-align: middle;
+}
 
 /* Slideshow container */
+
 .slideshow-container {
-  max-width: 1350px;
-  position: relative;
-  margin: 0 auto;
-    
+    max-width: 1350px;
+    position: relative;
+    margin: 0 auto;
+
 }
 
 .active {
-  background-color: #717171;
+    background-color: #717171;
 }
 
 
 /* On smaller screens, decrease text size */
+
 @media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
+    .text {
+        font-size: 11px
+    }
 }
 
 
-main figure { 
+main figure {
     display: inline-flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
     margin: 5px;
-    width:100%;
-    
-    }
-main img { 
+    width: 100%;
+
+}
+
+main img {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -148,7 +182,7 @@ main img {
     /*min-width: 325px;*/
     /*border: solid 5pt;
     border-color: #F39C12;*/
-    }
+}
 
 main p {
     font-size: 20px;
@@ -159,17 +193,23 @@ main p {
     margin-bottom: 10px;
 }
 
+table,
+th,
+td {
+    border: 1px solid black;
+}
 
-    
 
 
-article p {  
-    min-width: 350px; /* fill the page in the small/phone view */
+article p {
+    min-width: 350px;
+    /* fill the page in the small/phone view */
     margin-right: auto;
     padding-bottom: 5px;
     padding-top: 5px;
     align-items: flex-end;
 }
+
 article {
     font-size: 1rem;
     color: #272825;
@@ -178,8 +218,9 @@ article {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: flex-start;
-    
+
 }
+
 h3 {
     font-size: 3rem;
     color: #272825;
@@ -199,7 +240,7 @@ section {
     align-items: center;
     flex-flow: column nowrap;
     font-size: 1.5rem;
-    
+
 }
 
 
@@ -207,7 +248,7 @@ iframe {
     display: inline-flex;
     align-items: flex-end;
     justify-content: center;
-    
+
 }
 
 footer {
@@ -215,14 +256,14 @@ footer {
     flex-flow: column;
     justify-content: center;
     align-items: center;
-        background-color: #272825;
-   
-}
-footer aside {
-    color: #586f3f
+    background-color: #272825;
 
 }
-footer>p {
+
+footer aside {
     color: #586f3f
-       
+}
+
+footer > p {
+    color: #586f3f
 }
