--- a/assignments/bikingsite/styles/medium.css
+++ b/assignments/bikingsite/styles/medium.css
@@ -1,30 +1,32 @@
 @media only screen and (min-width: 37.5em) {
-  /* Only CSS rules that need to be changed to meet the layout needs from small to medium go in here */
-    
-      nav ul.hide {
-      display: block;}
+    /* Only CSS rules that need to be changed to meet the layout needs from small to medium go in here */
+    nav ul.hide {
+        display: block;
+    }
 
     nav {
         display: inline;
     }
-  nav button { 
-      display:none; }  /* hamburger button does not need to be shown */
-    
-    nav.ul.hide {display: block;}
-    
+    nav button {
+        display: none;
+    }
+    /* hamburger button does not need to be shown */
+    nav.ul.hide {
+        display: block;
+    }
+
     /*nav ul {
         display: block;
     }
     */
-    
-     ul {
+    ul {
         list-style-type: none;
         margin: 0;
         padding: 0;
         overflow: hidden;
         background-color: #333;
     }
-    li{
+    li {
         float: left;
     }
     li a {
@@ -37,5 +39,5 @@
     li a:hover {
         background-color: #111;
     }
-   
-   }
+
+}
