--- a/assignments/bikingsite/styles/sales.css
+++ b/assignments/bikingsite/styles/sales.css
@@ -1,6 +1,10 @@
 /* This main css file contains the default rules and is geared toward the small/phone view */
 
-* { box-sizing: border-box;}  /* This wildcard applies to all elements ensuring a box layout model */
+* {
+    box-sizing: border-box;
+}
+
+/* This wildcard applies to all elements ensuring a box layout model */
 
 h1 {
     font-size: 4rem;
@@ -9,20 +13,22 @@ h1 {
 }
 
 .grid-container {
-  display: grid;
-  grid-template-columns: 400px 400px 400px;
-  
-  padding: 10px;
+    display: grid;
+    grid-template-columns: 400px 400px 400px;
+
+    padding: 10px;
 }
+
 .grid-item {
-  
-  padding: 20px;
-  font-size: 16px;
-  color: #272825;
-  text-align: center;
+
+    padding: 20px;
+    font-size: 16px;
+    color: #272825;
+    text-align: center;
 }
+
 .grid-container {
-     display: flex;
+    display: flex;
     flex-flow: wrap;
     justify-content: center;
     flex-wrap: wrap;
@@ -30,51 +36,70 @@ h1 {
 }
 
 /* Create four equal columns that sits next to each other */
+
 .grid-item {
-  flex: 50%;
-  /*max-width: %;*/
-  padding: 0 4px;
-  grid-gap: 5px;
+    flex: 50%;
+    /*max-width: %;*/
+    padding: 0 4px;
+    grid-gap: 5px;
 }
 
 .grid-item img {
-  margin-top: 8px;
-  vertical-align: middle;
-  grid-column-gap: 20px;
+    margin-top: 8px;
+    vertical-align: middle;
+    grid-column-gap: 20px;
 }
 
 .grid-item p {
     font-size: 20px;
-    
+
 }
 
 
 div {
-    margin:.5rem;}
-a {margin-right: 1rem;}
+    margin: .5rem;
+}
+
+a {
+    margin-right: 1rem;
+}
+
 /* hover effect - not anchor tags around images */
-img:hover {box-shadow: 5px 5px 5px #8fc4e5;}
+
+img:hover {
+    box-shadow: 5px 5px 5px #8fc4e5;
+}
+
 /* rounded corners - boxmodel */
-.rocorn {border-radius: 5px 50px;}
+
+.rocorn {
+    border-radius: 5px 50px;
+}
+
 /* simple opacity */
-.opac {opacity: .5;}
+
+.opac {
+    opacity: .5;
+}
 
 
 
 /* Responsive layout - makes a two column-layout instead of four columns */
+
 @media (max-width: 800px) {
-  .grid-item {
-    flex: 33%;
-    max-width: 33%;
-    grid-gap: 5px;
-  }
+    .grid-item {
+        flex: 33%;
+        max-width: 33%;
+        grid-gap: 5px;
+    }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+
 @media (max-width: 600px) {
-  .grid-item {
-    flex: 100%;
-    max-width: 100%;
-    grid-gap: 5px;
-  }
+    .grid-item {
+        flex: 100%;
+        max-width: 100%;
+        grid-gap: 5px;
+    }
 }
